--- a/Galaxian/Config/DefaultEngine.ini
+++ b/Galaxian/Config/DefaultEngine.ini
@@ -78,6 +78,7 @@ r.PathTracing=True
 r.GenerateMeshDistanceFields=False
 r.DistanceFields.DefaultVoxelDensity=0.200000
 r.Nanite.ProjectEnabled=False
+r.Nanite=0
 r.AllowStaticLighting=False
 r.NormalMapsForStaticLighting=False
 r.ForwardShading=False
@@ -96,7 +97,7 @@ r.DefaultFeature.Bloom=False
 r.DefaultFeature.AmbientOcclusion=False
 r.DefaultFeature.AmbientOcclusionStaticFraction=True
 r.DefaultFeature.AutoExposure=False
-r.DefaultFeature.AutoExposure.Method=0
+r.DefaultFeature.AutoExposure.Method=2
 r.DefaultFeature.AutoExposure.Bias=1.000000
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.800000
@@ -199,8 +200,8 @@ VisualizeCalibrationCustomMaterialPath=None
 VisualizeCalibrationGrayscaleMaterialPath=/Engine/EngineMaterials/PPM_DefaultCalibrationGrayscale.PPM_DefaultCalibrationGrayscale
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
-DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
-DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
+DefaultGraphicsRHI=DefaultGraphicsRHI_DX11
 -D3D12TargetedShaderFormats=PCD3D_SM5
 +D3D12TargetedShaderFormats=PCD3D_SM6
 -D3D11TargetedShaderFormats=PCD3D_SM5
