--- a/Galaxian/Config/DefaultEngine.ini
+++ b/Galaxian/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Main.Main
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Script/Galaxian.GalaxianGameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
