--- a/CrashBandicoot/Config/DefaultEngine.ini
+++ b/CrashBandicoot/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/_Project/Maps/SplashScreen.SplashScreen
 EditorStartupMap=/Game/_Project/Maps/SplashScreen.SplashScreen
 GlobalDefaultGameMode="/Script/CrashBandicoot.CrashBandicootGameMode"
+GameInstanceClass=/Game/_Project/Framework/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
