--- a/CrashBandicoot/Config/DefaultEngine.ini
+++ b/CrashBandicoot/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Project/Maps/SplashScreen.SplashScreen
-EditorStartupMap=/Game/_Project/Maps/SplashScreen.SplashScreen
+GameDefaultMap=/Game/_Project/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/_Project/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode="/Script/CrashBandicoot.CrashBandicootGameMode"
 GameInstanceClass=/Game/_Project/Framework/BP_GameInstance.BP_GameInstance_C
 
