--- a/CrashBandicoot/Config/DefaultEngine.ini
+++ b/CrashBandicoot/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Project/Maps/LevelSelection.LevelSelection
 EditorStartupMap=/Game/_Project/Maps/LevelSelection.LevelSelection
-GlobalDefaultGameMode="/Script/CrashBandicoot.CrashBandicootGameMode"
-GameInstanceClass=/Game/_Project/Framework/BP_GameInstance.BP_GameInstance_C
+GlobalDefaultGameMode=/Game/_Project/Blueprints/GM_Gameplay.GM_Gameplay_C
+GameInstanceClass=/Game/_Project/Blueprints/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
