--- a/CrashBandicoot/Config/DefaultEngine.ini
+++ b/CrashBandicoot/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Project/Maps/LevelSelection.LevelSelection
-EditorStartupMap=/Game/_Project/Maps/LevelSelection.LevelSelection
+GameDefaultMap=/Game/_Project/Maps/Level_01.Level_01
+EditorStartupMap=/Game/_Project/Maps/Level_01.Level_01
 GlobalDefaultGameMode=/Game/_Project/Blueprints/GM_Gameplay.GM_Gameplay_C
 GameInstanceClass=/Game/_Project/Blueprints/BP_GameInstance.BP_GameInstance_C
 
