Add pickup sound

--- a/CrashBandicoot/Config/DefaultEngine.ini
+++ b/CrashBandicoot/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/_Project/Maps/Level_01.Level_01
+GameDefaultMap=/Game/_Project/Maps/SplashScreen.SplashScreen
 EditorStartupMap=/Game/_Project/Maps/Level_01.Level_01
 GlobalDefaultGameMode=/Game/_Project/Blueprints/GM_Gameplay.GM_Gameplay_C
 GameInstanceClass=/Game/_Project/Blueprints/BP_GameInstance.BP_GameInstance_C
